<resources>
    <string name="app_name">Notes</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="delete">DELETE</string>
    <string name="create">Create</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="password">Password</string>
    <string name="birth_day">Birth Day</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="no_camera_detected">No Camera detected</string>

    <string name="runtime_permission_double_name" translatable="false">%1$s and %2$s</string>
    <string name="runtime_permission_camera">Camera</string>
    <string name="runtime_permission_location">Location</string>
    <string name="runtime_permission_microphone" translatable="false">Microphone</string>
    <string name="runtime_permission_storage">Storage</string>
    <string name="runtime_permission_phone">Phone</string>
    <string name="runtime_permission_rationale_message_camera">Please enable Camera access to take picture.</string>
    <string name="runtime_permission_rationale_message_microphone">Please enable Microphone access to use Card Reader.</string>
    <string name="runtime_permission_rationale_message_storage">Please enable Storage access to upload picture for your report.</string>
    <string name="runtime_permission_rationale_message"><![CDATA[Notes would like to access your <b>%1$s</b>. It is required to ensure all devices and functionalities are working properly.]]></string>
    <string name="runtime_permission_permanently_denied_message"><![CDATA[Notes does not have access to your <b>%1$s</b>. Please enable the access to use Notes properly. Go to Settings > Permissions and turn ON <b>%1$s</b>.]]></string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="str_please_waiting">Please wait ...</string>
    <string name="str_choose_birth_date">Choose birth date</string>
    <string name="update_data">Update Data</string>
    <string name="fcm_message">Ads Notification</string>
    <string name="default_notification_channel_id">channel_default</string>
    <string name="message">Message</string>
    <string name="token">Token</string>
    <string name="topic">Topic</string>
    <string name="data">Data</string>
    <string name="select_notification_type">Select Notification Type</string>
    <string name="send_notification">Send Notification</string>
    <string name="prompt_info_title">Notes App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Notes App is using Android biometric
        authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your Email and password to confirm
        activation of Biometric Login.</string>
    <string name="cancel">Cancel</string>
    <string name="btn_authorize">Authorize</string>
    <string name="secret_key_name">biometric_sample_encryption_key</string>
    <string name="logout">Logout</string>
</resources>